syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ortiz.grpc.services.ds";

package services;

service DataService {
  rpc GetPerson (GetPersonRequest) returns (Person) {}
  rpc SavePerson (Person) returns (Person) {}
  rpc UpdatePerson (Person) returns (Person) {}

  rpc GetPhone (GetPhoneRequest) returns (Phone) {}
  rpc SavePhone (Phone) returns (Phone) {}
  rpc UpdatePhone (Phone) returns (Phone) {}
}

message GetPersonRequest {
  string tenantId = 1;
  string personId = 2;
}

message Phone {
  string id = 1;
  int32 ddi = 2;
  int32 ddd = 3;
  int32 number = 4;
  int32 extensionLine = 5;
}

message Person {
  string tenantId = 1;
  string personId = 2;
  string name = 3;
  string type = 4;
  string cpfCnpj = 5;
  repeated Phone phones = 6;
}

message GetPhoneRequest {
  string phoneId = 1;
}

